public/frontend/assets/css/style.css
/* ... */
.sure .sure_content {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 400px;
}

.sure iframe {
    width: 90%;
    height: 420px;
}

.sure .sure_content h2 {
    font-size: 48px;
}

.sure .sure_content h3 {
    font-size: 22px;
    font-weight: 700;
}

.sure .sure_content h3 span {
    color: red;
}

.sure .sure_content button {
    padding: 10px 20px;
    border: none;
    background-color: white;
    margin-top: 50px;
}

.sure iframe {
    border: 5px solid rgb(224, 224, 224);
}

/* =======================================================================================================================
==================================================================== nav page css starts from here
========================================================================================================================= */

.nav-link {
    color: #000000;
}

/* /* =======================================================================================================================
==================================================================== nav page css starts from here
=== */

@media screen and (max-width: 576px) {
    .primary_btn {
        background: red;
        padding: 5px 10px;
        font-size: 14px;
    }
    .secondary_btn {
        padding: 5px 10px;
        font-size: 14px;
    }
    #slider-container {
        width: 100%;
    }
    .contact .checkbox {
        flex-direction: column;
    }
    .evolution .count {
        flex-wrap: wrap;
    }
    .evolution .count .one {
        width: 48%;
    }
    nav .left {
        width: 120px;
    }
    .navbar .logo {
        width: 120px;
    }
    nav .middle .navbar-nav {
        --bs-scroll-height: 247px;
        background: white;
        padding: 17px;
        position: absolute;
        z-index: 2;
        top: 72px;
    }
    .banner .overlay span {
        font-size: 13px;
        padding: 0;
    }
    .banner .overlay h2 {
        font-size: 15px;
    }
    .common-heading {
        font-size: 25px;
    }
    .common-paragraph {
        font-size: 14px;
    }
    .section-padding {
        padding: 20px;
    }
    .evolution .main {
        margin-top: 40px;
        padding: 30px;
    }
    .evolution .main .video {
        padding-right: 0;
    }
    .evolution .main .evolution_video {
        height: auto;
        width: 100%;
        margin-bottom: 20px;
    }
    .evolution .main h6 {
        font-size: 10px;
        padding: 5px 10px;
    }
    .evolution .main h2 {
        font-size: 16px;
    }
    .service .service_slider .topbar button {
        padding: 5px 14px;
        font-size: 10px;
    }
    .service .service_slider .topbar {
        padding: 0px 0px;
        display: flex;
        width: 100%;
        justify-content: space-between;
    }
    .service .service_slider .inner_part {
        padding-top: 40px;
    }
    .service .service_slider .inner_part h2 {
        font-size: 20px;
    }
    .service .service_slider .inner_part p {
        padding-right: 0px;
    }
    .service .service_slider .inner_part .buttons button.active-button {
        font-size: 10px;
    }
    .service .service_slider .inner_part .buttons button {
        padding: 6px 9px;
        font-size: 10px;
    }
    .service .service_slider .inner_part .buttons span {
        height: 20px;
        width: 20px;
        margin-right: 15px;
        line-height: 20px;
    }
    .clients .clients_logo {
        padding: 40px 35px;
        width: 100%;
        margin-bottom: 30px;
    }
    .clients .clients_p {
        font-size: 18px;
    }
    .slider-item {
        flex-direction: column;
    }
    .satisfaction .main .img {
        width: 25%;
    }
    .satisfaction .main .content {
        width: 24%;
    }
    .satisfaction .main .img img {
        width: 100%;
    }
    .contact .main .left .top h3 {
        font-size: 17px;
    }
    .footer .main ul li {
        font-size: 13px;
    }
    .satisfaction .flx {
        width: 315px;
    }
    .footer .content .footer_frm {
        width: 150px;
    }
    .portfolio .portfolio_slider .topbar button {
        padding: 2px 7px;
        font-size: 13px;
    }
    .portfolio .portfolio_slider .portfolio_video iframe {
        height: 190px;
        width: 100%;
    }
    .learn_banner .learn_banner_video iframe {
        height: 168px;
        width: 284px;
    }
    .testimonial iframe {
        height: 165px;
        width: 100%;
    }
    .sure .sure_content h2 {
        font-size: 40px;
    }
    .sure .sure_content button {
        padding: 7px 11px;
        margin-top: 8px;
        font-size: 13px;
    }
    .sure .sure_content {
        height: 250px;
    }
    .sure .sure_content .content {
        text-align: center;
    }
    .contact .middle ul li {
        font-size: 13px;
    }

    .sure iframe {
        width: 100%;
        height: 205px;
    }

    .contact .main {
        margin-top: 34px;
        padding: 20px;
    }
    .contact .main .content p {
        font-size: 13px;
    }
    .footer .main {
        padding: 40px;
    }
    .footer {
        padding-top: 20px;
        padding-bottom: 20px;
    }
    .footer .main::after {
        bottom: 147px;
    }
    .carrer_banner .carrer_heading {
        font-size: 26px;
        line-height: 33px;
        padding-bottom: 5px;
    }
    .primary-btn {
        font-size: 11px;
        padding: 10px 20px;
        margin-bottom: 20px;
    }
    /* .logo {
        width: 50px;
    } */
}

/* Styles for screens between 768px and 992px wide */
@media screen and (min-width: 769px) and (max-width: 992px) {
}

/* Styles for screens larger than 992px wide */
@media screen and (min-width: 993px) {
}

